--- a/less/general.less
+++ b/less/general.less
@@ -30,15 +30,15 @@ body {
 }
 
 a {
-	color: royalblue;
+	color: #1fa7da;
 }
 
 a:visited {
-	color: purple;
+	color: #1fa7da;
 }
 
 a:hover,
 a:focus,
 a:active {
-	color: midnightblue;
+	color: #1fa7da;
 }
