--- a/less/typography.less
+++ b/less/typography.less
@@ -15,6 +15,7 @@ textarea {
 
 h1, h2, h3, h4, h5, h6 {
 	clear: both;
+	margin-bottom: 1em;
 }
 
 .aviator-heading-loop(@counter) when (@counter <= 6) {
@@ -68,8 +69,6 @@ kbd,
 tt,
 var {
 	font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
-	font-size: 15px;
-	font-size: 1.5rem;
 }
 
 abbr,
