--- a/less/entry-content.less
+++ b/less/entry-content.less
@@ -10,6 +10,8 @@ Entry Content
 }
 
 .entry-content {
+	color: #777;
+
 	> *:first-child {
 		margin-top: 0;
 	}
@@ -21,5 +23,15 @@ Entry Content
 	h1,h2,h3,h4,h5,h6 {
 		clear: none;
 		margin: 1em 0;
+		color: #444;
+	}
+
+	.more-link {
+		font-weight: 500;
+		text-decoration: none;
+
+		&:hover {
+			text-decoration: underline;
+		}
 	}
 }
