--- a/less/masthead.less
+++ b/less/masthead.less
@@ -7,7 +7,9 @@ Masthead
 		margin-bottom: 30px;
 
 		h1 {
+			color: #333;
 			font-size: 30px;
+			margin-bottom: 0;
 			a {
 				color: inherit;
 				text-decoration: none;
@@ -15,7 +17,9 @@ Masthead
 		}
 
 		h2 {
+			color: #777;
 			font-size: 16px;
+			margin-bottom: 0;
 		}
 	}
 }
