--- a/style.css
+++ b/style.css
@@ -476,6 +476,7 @@ Main Menus
   -webkit-box-shadow: 0px 6px 0 rgba(0, 0, 0, 0.075);
   -moz-box-shadow: 0px 6px 0 rgba(0, 0, 0, 0.075);
   box-shadow: 0px 6px 0 rgba(0, 0, 0, 0.075);
+  font-size: 0.85em;
 }
 #top-menu-bar:before,
 #top-menu-bar:after {
@@ -489,17 +490,44 @@ Main Menus
   margin: 0;
   padding: 0;
   list-style: none;
-  font-size: 0.85em;
 }
 #top-menu-bar ul li {
   float: right;
   margin-left: 10px;
+  position: relative;
 }
 #top-menu-bar ul li a {
-  padding: 6px 0;
+  padding: 6px 6px;
   color: #d9d3d3;
   display: block;
   text-decoration: none;
+}
+#top-menu-bar ul li ul {
+  background: #383131;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -65px;
+  width: 130px;
+  display: none;
+}
+#top-menu-bar ul li ul li {
+  display: block;
+  margin: 0;
+  float: none;
+}
+#top-menu-bar ul li ul li a {
+  display: block;
+  padding: 7px 10px;
+}
+#top-menu-bar ul li ul li:first-child a {
+  padding-top: 12px;
+}
+#top-menu-bar ul li ul li:last-child a {
+  padding-bottom: 12px;
+}
+#top-menu-bar ul li:hover ul {
+  display: block;
 }
 #site-navigation {
   clear: both;
