--- a/less/general.less
+++ b/less/general.less
@@ -20,7 +20,8 @@ body {
 		}
 	}
 
-	&.page-template-home-panels-php {
+	&.page-template-home-panels-php,
+	&.siteorigin-panels-home {
 		#primary {
 			padding-right: 0;
 			float: none;
