--- a/less/elements.less
+++ b/less/elements.less
@@ -2,10 +2,11 @@
 Elements
 --------------------------------------------------------------*/
 hr {
-	background-color: #ccc;
+	display: block;
+	background-color: #ddd;
 	border: 0;
 	height: 1px;
-	margin-bottom: 1.5em;
+	margin: 1em auto;
 }
 
 ul,
