Added basic responsiveness.

--- a/less/general.less
+++ b/less/general.less
@@ -28,6 +28,20 @@ body {
 			width: auto;
 		}
 	}
+
+	@media (max-width: 800px) {
+		&.has-sidebar {
+			#primary {
+				float: none;
+				width: auto;
+			}
+
+			#secondary {
+				float: none;
+				width: auto;
+			}
+		}
+	}
 }
 
 a {
