--- a/less/layout.less
+++ b/less/layout.less
@@ -3,6 +3,16 @@ Layout
 --------------------------------------------------------------*/
 
 .container {
+	.box-sizing(border-box);
 	width: 1020px;
 	margin: 0 auto;
+}
+
+@media (max-width: 1080px) {
+
+	.container {
+		width: auto;
+		margin: 0 30px;
+	}
+
 }
