--- a/less/masthead.less
+++ b/less/masthead.less
@@ -5,11 +5,13 @@ Masthead
 #masthead {
 	.site-branding {
 		margin-bottom: 30px;
+		font-family: 'Maven Pro', sans-serif;
 
 		h1 {
 			color: #333;
 			font-size: 30px;
 			margin-bottom: 0;
+
 			a {
 				color: inherit;
 				text-decoration: none;
@@ -20,6 +22,10 @@ Masthead
 			color: #777;
 			font-size: 16px;
 			margin-bottom: 0;
+		}
+
+		h1,h2 {
+			line-height: 1.25em;
 		}
 	}
 }
