--- a/style.css
+++ b/style.css
@@ -153,11 +153,12 @@ Masthead
 --------------------------------------------------------------*/
 #masthead .site-branding {
   margin-bottom: 30px;
-  font-family: 'Maven Pro', sans-serif;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 300;
 }
 #masthead .site-branding h1 {
   color: #333;
-  font-size: 30px;
+  font-size: 32px;
   margin-bottom: 0;
 }
 #masthead .site-branding h1 a {
@@ -172,6 +173,11 @@ Masthead
 #masthead .site-branding h1,
 #masthead .site-branding h2 {
   line-height: 1.25em;
+}
+@media (max-width: 680px) {
+  #masthead .site-branding {
+    text-align: center;
+  }
 }
 body {
   background: #FAFAFA;
@@ -913,10 +919,10 @@ Layout
   width: 1020px;
   margin: 0 auto;
 }
-@media (max-width: 1080px) {
+@media (max-width: 1050px) {
   .container {
     width: auto;
-    margin: 0 30px;
+    margin: 0 15px;
   }
 }
 #colophon {
