--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ Masthead
   }
 }
 body {
-  background: #FAFAFA;
+  background: #f9f9f9;
 }
 body.has-sidebar #primary {
   padding-right: 20px;
@@ -586,7 +586,7 @@ Main Menus
   position: relative;
 }
 #site-navigation div > ul > li > a {
-  padding: 14px 25px;
+  padding: 16px 25px;
   color: #555;
   font-weight: 500;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
