Set version number.

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Aviator
 Author: Greg Priday
 Author URI: http://siteorigin.com/
 Description: Incredible performance backed by our dedicated support forum, Aviator is a sophisticated theme that offers a clean, dynamic appearance for businesses, portfolios and personal blogs. In a world of every increasing complexity of WordPress themes, Aviator takes a step back to give you only what you truly need to get your website online. Page Builder forms the backbone of Aviator, allowing you to create responsive layouts that adapt to mobile devices. We offer free support on our support <a href="http://siteorigin.com/thread/">forums</a> (http://siteorigin.com/thread/).
-Version: 0.9.1
+Version: dev
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl.html
 Text Domain: aviator
