--- a/less/navigation.less
+++ b/less/navigation.less
@@ -72,15 +72,16 @@ Main Menus
 	display: block;
 	width: 100%;
 	.clearfix();
-	margin: 20px 0;
-
-	.background-image( linear-gradient(to bottom, #f9f9f9, #F2F2F2) );
-	.box-shadow();
-	.border-radius(3px);
-	.box-shadow( 0px 1px 2px rgba(0,0,0,0.05), inset 0 1px rgb(255,255,255) );
-	border: 1px solid #d5d5d5;
+	z-index: 999;
 
 	div {
+
+		.background-image( linear-gradient(to bottom, #f9f9f9, #F2F2F2) );
+		.border-radius(3px);
+		.box-shadow( 0px 1px 2px rgba(0,0,0,0.05), inset 0 1px rgb(255,255,255) );
+		border: 1px solid #d5d5d5;
+
+		.clearfix();
 		font-size: 0.95em;
 
 		> ul {
@@ -157,8 +158,6 @@ Main Menus
 		}
 	}
 
-
-
 	li {
 		float: left;
 		position: relative;
@@ -171,5 +170,14 @@ Main Menus
 
 	.current_page_item, .current-menu-item {
 
+	}
+}
+
+#site-navigation-sticky-wrapper.is-sticky {
+	div {
+		border-top: 0;
+		.border-top-left-radius(0px);
+		.border-top-right-radius(0px);
+		.box-shadow( 0 1px 1px rgba(0,0,0,0.075) );
 	}
 }
